18 November
+ Added Lightbox support as an option for image folders (verdon)

7 October 2009
+ Order fckeditor files on popup

15 Sept 2009
+ Added htmlspecialchars on titles for docs, images, media. Single quotes can wreck js
+ updated windows media filter
+ Updated templates/filters/windows.tpl

Version 2.2.7
--------------------------------------------------------------------------
+ Added trim to ffmpeg file directory
+ Added description to search for files
+ FCKeditor media insertion had problems with any media other than
  YouTube embeds. New script was written to place a bookmark image for
  the media which is replaced on a click via jquery ajax.
+ updated files: javascript/fck_video_replace,
  javascript/fckeditor/head.js,
  templates/filters/media/mediaplayer.swf
  templates/filters/media/yt.swf

Version 2.2.6
--------------------------------------------------------------------------
+ Fixed bug with editing Multimedia. Reported by alar.
+ Fixed bug with File Cabinet in fckeditor not loading properly.

Version 2.2.5
---------------------------------------------------------------------------
+ Fixed bug that displayed error message on document upload.
+ Proper error message now on document uploaded to unwritable
  directory
+ Directory check on unwritable directory prevents upload link

Version 2.2.4
---------------------------------------------------------------------------
30 March 2009
+ Error checking added to document upload.
+ Fixed multimedia folder pager.

25 March 2009
+ Added file type limits to fckeditor

23 March 2009
+ Added method for fixing document directories
+ Added file search to folder pager
+ Added document FCKeditor interaction
+ Cleaned up interface
+ Updated:
javascript/fckeditor/head.js
templates/fckeditor.tpl
templates/fckdocuments.tpl
templates/fck.css
templates/fckimages.tpl
templates/fckfolders.tpl
templates/folder_list.tpl
templates/settings.tpl


20 March 2009
+ Started building FCKeditor interaction
+ Updated: