@@ -1,0 +1,11 @@
+<div id="lightbox-pick">
+{START_FORM}
+<div><b>{DIRECTION_DESC}</b><br />
+{DIRECTION_1} {DIRECTION_1_LABEL}<br />
+{DIRECTION_2} {DIRECTION_2_LABEL}<br />
+<b>{NUM_VISIBLE_LABEL}</b> {NUM_VISIBLE}</div>
+<p class="center">{GO}</p>
+{END_FORM}
+<p class="center"><a href="#" onclick="return lightbox_pick();">{CANCEL}</a></p>
+</div>
+{LINK}
