@@ -1,0 +1,7 @@
+<div class="lightbox">
+<!-- BEGIN thumbnails -->
+   <div style="margin-bottom: 2px;">{IMAGE}</div>
+<!-- END thumbnails -->
+<br style="clear: both" />
+</div>
+<!-- BEGIN message --><p style="font-size : .9em; color : red; font-weight : bold">{MESSAGE}</p><!-- END message -->
