@@ -183,6 +183,19 @@ div#carousel-pick {
     padding : 8px;
 }
 
+div#lightbox-pick {
+    width : 140px;
+    height : 190px;
+    background-color : white;
+    display : none;
+    position : absolute;
+    border : 1px solid black;
+    float : right;
+    left : 160px;
+    top : 100px;
+    padding : 8px;
+}
+
 span.item-title, span.item-info { 
    font-size : 10px;
 }
