@@ -1,3 +1,6 @@
+19 November
++ Added some options to the lightbox view (verdon)
+
 18 November
 + Added Lightbox support as an option for image folders (verdon)
 
